Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-11326

[memcached] Function call argument is an uninitialised value in upr_stream_req_executor

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 3.0
    • 3.0
    • couchbase-bucket
    • Security Level: Public
    • None
    • Untriaged
    • Unknown

    Description

      Bug reported by the clang static analyzer.

      Description: Function call argument is an uninitialized value
      File: /Users/dave/repos/couchbase/server/source/memcached/daemon/memcached.c upr_stream_req_executor()
      Line: 4242

      See attached report.

      From speaking to Trond offline he believes that it shouldn't be possible to enter upr_stream_req_executor() with c->aiostat == ENGINE_ROLLBACK (which is what triggers this error) - in which case we should just add a suitable assert() to squash the warning.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            trond Trond Norbye
            drigby Dave Rigby (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty