MB-11326: Not possible to enter dcp_stream_req_executor() with ENGINE_ROLLBACK

Change-Id: I68464071fd6d19d9f06ce0194b61346174dee032
Reviewed-on: http://review.couchbase.org/38560
Tested-by: Dave Rigby <daver@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>
Tested-by: Trond Norbye <trond.norbye@gmail.com>